--- a/src/SportsData.Api/azure-pipelines.yml
+++ b/src/SportsData.Api/azure-pipelines.yml
@@ -5,7 +5,8 @@ trigger:
       - test/*
   paths:
     include:
-      - 'src/SportsData.Api/*'
+      - 'src/SportsData.Api/**'
+      - 'src/SportsData.Core/**'
 
 # Centralized agent and demand config for all stages/jobs
 pool:
