--- a/src/SportsData.Provider/azure-pipelines.yml
+++ b/src/SportsData.Provider/azure-pipelines.yml
@@ -5,7 +5,8 @@ trigger:
       - test/*
   paths:
     include:
-      - 'src/SportsData.Provider/*'
+      - 'src/SportsData.Provider/**'
+      - 'src/SportsData.Core/**'
 
 # Centralized agent and demand config for all stages/jobs
 pool:
