--- a/src/SportsData.Api/SportsData.Api.csproj
+++ b/src/SportsData.Api/SportsData.Api.csproj
@@ -21,6 +21,7 @@
     <None Remove="Infrastructure\Data\Canonical\Sql\GetMatchupForPreviewGeneration.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetMatchupResultByContestId.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetMatchupsForCurrentWeek.sql" />
+    <None Remove="Infrastructure\Data\Canonical\Sql\GetRankingsByPollBySeasonByWeek.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetTeamCard.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetTeamCardSchedule.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetTeamSeasons.sql" />
@@ -34,6 +35,7 @@
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetMatchupForPreviewGeneration.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetMatchupResultByContestId.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetMatchupsForCurrentWeek.sql" />
+    <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetRankingsByPollBySeasonByWeek.sql" />
   </ItemGroup>
 
   <ItemGroup>
