--- a/src/SportsData.Api/SportsData.Api.csproj
+++ b/src/SportsData.Api/SportsData.Api.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <None Remove="Infrastructure\Data\Canonical\Sql\GetContestResultsByContestIds.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetCurrentSeasonWeek.sql" />
+    <None Remove="Infrastructure\Data\Canonical\Sql\GetFranchiseSeasonStatistics.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetFranchiseSeasonStatisticsForPreviewGeneration.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetLeagueMatchupsByContestIds.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetMatchupForPreviewGeneration.sql" />
@@ -30,6 +31,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetContestResultsByContestIds.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetCurrentSeasonWeek.sql" />
+    <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetFranchiseSeasonStatistics.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetFranchiseSeasonStatisticsForPreviewGeneration.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetLeagueMatchupsByContestIds.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetMatchupForPreviewGeneration.sql" />
