--- a/src/UI/sd-ui/package.json
+++ b/src/UI/sd-ui/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "firebase": "^11.6.1",
+    "lucide-react": "^0.544.0",
     "luxon": "^3.7.1",
     "moment-timezone": "^0.5.48",
     "react": "^19.1.0",
