--- a/src/SportsData.Api/SportsData.Api.csproj
+++ b/src/SportsData.Api/SportsData.Api.csproj
@@ -21,6 +21,7 @@
     <None Remove="Infrastructure\Data\Canonical\Sql\GetContestResultsByContestIds.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetCurrentAndLastWeekSeasonWeeks.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetCurrentSeasonWeek.sql" />
+    <None Remove="Infrastructure\Data\Canonical\Sql\GetFranchiseSeasonCompetitionResultsByFranchiseSeasonId.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetFranchiseSeasonStatistics.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetFranchiseSeasonStatisticsForPreviewGeneration.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetLeagueMatchupsByContestIds.sql" />
@@ -41,6 +42,7 @@
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetContestResultsByContestIds.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetCurrentAndLastWeekSeasonWeeks.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetCurrentSeasonWeek.sql" />
+    <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetFranchiseSeasonCompetitionResultsByFranchiseSeasonId.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetFranchiseSeasonStatistics.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetFranchiseSeasonStatisticsForPreviewGeneration.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetLeagueMatchupsByContestIds.sql" />
