--- a/src/SportsData.Api/SportsData.Api.csproj
+++ b/src/SportsData.Api/SportsData.Api.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\Errors\CompetitionsWithoutCompetitors.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\Errors\CompetitionsWithoutPlays.sql" />
+    <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\Errors\CompetitionsWithoutDrives.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetContestOverviewGameInfo.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetContestOverviewPlayLog.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetContestOverviewQuarterScores.sql" />
