build actions for ui

--- a/.github/workflows/deploy-ui.yml
+++ b/.github/workflows/deploy-ui.yml
@@ -38,4 +38,4 @@ jobs:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         action: "upload"
         app_location: "src/UI/sd-ui"
-        output_location: "dist"
+        output_location: "build"
