--- a/src/SportsData.Api/Properties/launchSettings.json
+++ b/src/SportsData.Api/Properties/launchSettings.json
@@ -62,6 +62,17 @@
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7177;http://localhost:5262"
+    },
+    "http-prod": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "APPCONFIG_LABEL": "Prod"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5262"
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
