mermaid and azure icons

--- a/src/about/package.json
+++ b/src/about/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "Technical portfolio and architectural overview for sportDeets",
   "dependencies": {
+    "mermaid": "^11.12.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1"
