--- a/.github/workflows/deploy-ui.yml
+++ b/.github/workflows/deploy-ui.yml
@@ -26,10 +26,12 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Set environment for dev
+      run: |
+        echo "REACT_APP_API_BASE_URL=https://api-dev.sportdeets.com" > .env.production
+
     - name: Build React app
       run: npm run build
-      env:
-        REACT_APP_API_BASE_URL: https://api-dev.sportdeets.com
 
     - name: Deploy to Azure Static Web App (Dev)
       uses: Azure/static-web-apps-deploy@v1
