--- a/src/UI/sd-ui/package.json
+++ b/src/UI/sd-ui/package.json
@@ -29,9 +29,11 @@
   },
   "scripts": {
     "start": "npm run lint && react-scripts start",
+    "start:dev": "npm run lint && env-cmd -f .env.dev react-scripts start",
     "start:prod-local": "npm run lint && set REACT_APP_API_BASE_URL=http://api-int.sportdeets.com&& react-scripts start",
     "server": "json-server api-mock/db.json --port 3001",
-    "build": "react-scripts build",
+    "build": "env-cmd -f .env.prod react-scripts build",
+    "build:dev": "env-cmd -f .env.dev react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --max-warnings=0"
@@ -58,6 +60,7 @@
     "@types/node": "^22.15.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
+    "env-cmd": "^11.0.0",
     "json-server": "^1.0.0-beta.3",
     "typescript": "^4.9.5"
   }
