--- a/.github/workflows/deploy-ui-dev.yml
+++ b/.github/workflows/deploy-ui-dev.yml
@@ -40,9 +40,15 @@ jobs:
 
     - name: Verify build output contains dev API URL
       run: |
-        echo "Checking build files for API URL..."
-        grep -r "api-dev.sportdeets.com" build/ || echo "WARNING: dev API URL not found in build!"
-        grep -r "api.sportdeets.com" build/ && echo "ERROR: prod API URL found in build!" || echo "Good: prod API URL not found"
+        echo "=== Checking build files for API URLs ==="
+        echo "Looking for dev API URL (api-dev.sportdeets.com):"
+        grep -r "api-dev.sportdeets.com" build/ && echo "✓ Found dev API URL" || echo "✗ WARNING: dev API URL NOT found!"
+        echo ""
+        echo "Looking for prod API URL (api.sportdeets.com - should NOT be here):"
+        grep -r "api.sportdeets.com" build/ && echo "✗ ERROR: prod API URL found!" || echo "✓ Good: prod API URL not found"
+        echo ""
+        echo "=== Checking specific JS files ==="
+        find build/static/js -name "*.js" -exec sh -c 'echo "File: {}"; grep -o "https://api[^\"]*sportdeets.com" {} | sort -u || echo "  No API URLs found"' \;
 
     - name: Deploy to Azure Static Web App (Dev)
       uses: Azure/static-web-apps-deploy@v1
