--- a/.github/workflows/deploy-ui-prod.yml
+++ b/.github/workflows/deploy-ui-prod.yml
@@ -26,6 +26,8 @@ jobs:
       run: npm run build
       env:
         REACT_APP_API_BASE_URL: https://api.sportdeets.com
+        REACT_APP_ENVIRONMENT: production
+        REACT_APP_PROD_URL: https://sportdeets.com
 
     - name: Deploy to Azure Static Web App (Production)
       uses: Azure/static-web-apps-deploy@v1
