--- a/.github/workflows/deploy-ui-dev.yml
+++ b/.github/workflows/deploy-ui-dev.yml
@@ -39,5 +39,6 @@ jobs:
         azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         action: "upload"
-        app_location: "src/UI/sd-ui/build"
-        skip_app_build: true
+        app_location: "src/UI/sd-ui"
+        output_location: "build"
+        app_build_command: "npm run build:dev"
