--- a/.github/workflows/deploy-services-prod-auto.yml
+++ b/.github/workflows/deploy-services-prod-auto.yml
@@ -74,7 +74,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: jrandallsexton/sports-data-config
-          token: ${{ secrets.PAT_TOKEN }}
+          token: ${{ secrets.GH_PAT }}
           path: sports-data-config
 
       - name: Update API image tag
