--- a/.github/workflows/deploy-ui-dev.yml
+++ b/.github/workflows/deploy-ui-dev.yml
@@ -26,12 +26,16 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Generate version
+      run: echo "REACT_APP_VERSION=v$(date +'%d%m%y%H%M')" >> $GITHUB_ENV
+
     - name: Build React app for dev
       run: npm run build
       env:
         REACT_APP_API_BASE_URL: https://api-dev.sportdeets.com
         REACT_APP_ENVIRONMENT: development
         REACT_APP_PROD_URL: https://sportdeets.com
+        REACT_APP_VERSION: ${{ env.REACT_APP_VERSION }}
 
     - name: Deploy to Azure Static Web App (Dev)
       uses: Azure/static-web-apps-deploy@v1
