--- a/.github/workflows/deploy-ui-prod.yml
+++ b/.github/workflows/deploy-ui-prod.yml
@@ -22,12 +22,16 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Generate version
+      run: echo "REACT_APP_VERSION=v$(date +'%d%m%y%H%M')" >> $GITHUB_ENV
+
     - name: Build React app
       run: npm run build
       env:
         REACT_APP_API_BASE_URL: https://api.sportdeets.com
         REACT_APP_ENVIRONMENT: production
         REACT_APP_PROD_URL: https://sportdeets.com
+        REACT_APP_VERSION: ${{ env.REACT_APP_VERSION }}
 
     - name: Deploy to Azure Static Web App (Production)
       uses: Azure/static-web-apps-deploy@v1
