--- a/src/UI/sd-ui/.env.prod-local
+++ b/src/UI/sd-ui/.env.prod-local
@@ -1,1 +1,2 @@
 REACT_APP_API_BASE_URL=http://api-int.sportdeets.com
+# REACT_APP_GOOGLE_MAPS_API_KEY will be injected by build pipeline from GitHub Secrets
