--- a/src/UI/sd-ui/.env.prod
+++ b/src/UI/sd-ui/.env.prod
@@ -1,3 +1,4 @@
 REACT_APP_API_BASE_URL=https://api.sportdeets.com
 REACT_APP_ENVIRONMENT=production
 REACT_APP_PROD_URL=https://sportdeets.com
+# REACT_APP_GOOGLE_MAPS_API_KEY will be injected by build pipeline from GitHub Secrets
