--- a/src/UI/sd-ui/package.json
+++ b/src/UI/sd-ui/package.json
@@ -7,11 +7,13 @@
     "@emotion/styled": "^11.14.1",
     "@microsoft/signalr": "^9.0.6",
     "@mui/material": "^7.3.1",
+    "@react-google-maps/api": "^2.20.7",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
+    "canvas-confetti": "^1.9.4",
     "chart.js": "^4.4.9",
     "firebase": "^11.6.1",
     "lucide-react": "^0.544.0",
