missing google api key

--- a/.github/workflows/deploy-ui-dev.yml
+++ b/.github/workflows/deploy-ui-dev.yml
@@ -36,6 +36,7 @@ jobs:
         REACT_APP_ENVIRONMENT: development
         REACT_APP_PROD_URL: https://sportdeets.com
         REACT_APP_VERSION: ${{ env.REACT_APP_VERSION }}
+        REACT_APP_GOOGLE_MAPS_API_KEY: ${{ secrets.REACT_APP_GOOGLE_MAPS_API_KEY }}
 
     - name: Deploy to Azure Static Web App (Dev)
       uses: Azure/static-web-apps-deploy@v1
