--- a/.github/workflows/deploy-ui-prod.yml
+++ b/.github/workflows/deploy-ui-prod.yml
@@ -32,6 +32,7 @@ jobs:
         REACT_APP_ENVIRONMENT: production
         REACT_APP_PROD_URL: https://sportdeets.com
         REACT_APP_VERSION: ${{ env.REACT_APP_VERSION }}
+        REACT_APP_GOOGLE_MAPS_API_KEY: ${{ secrets.REACT_APP_GOOGLE_MAPS_API_KEY }}
 
     - name: Deploy to Azure Static Web App (Production)
       uses: Azure/static-web-apps-deploy@v1
