--- a/.github/workflows/deploy-ui-dev.yml
+++ b/.github/workflows/deploy-ui-dev.yml
@@ -46,4 +46,4 @@ jobs:
         action: "upload"
         app_location: "src/UI/sd-ui"
         output_location: "build"
-        app_build_command: "npm run build:dev"
+        skip_app_build: true
