--- a/.github/workflows/deploy-ui-prod.yml
+++ b/.github/workflows/deploy-ui-prod.yml
@@ -42,4 +42,9 @@ jobs:
         action: "upload"
         app_location: "src/UI/sd-ui"
         output_location: "build"
-        skip_app_build: true
+      env:
+        REACT_APP_API_BASE_URL: https://api.sportdeets.com
+        REACT_APP_ENVIRONMENT: production
+        REACT_APP_PROD_URL: https://sportdeets.com
+        REACT_APP_VERSION: ${{ env.REACT_APP_VERSION }}
+        REACT_APP_GOOGLE_MAPS_API_KEY: ${{ secrets.REACT_APP_GOOGLE_MAPS_API_KEY }}
