--- a/.github/workflows/deploy-ui-prod.yml
+++ b/.github/workflows/deploy-ui-prod.yml
@@ -25,15 +25,6 @@ jobs:
     - name: Generate version
       run: echo "REACT_APP_VERSION=v$(date +'%d%m%y%H%M')" >> $GITHUB_ENV
 
-    - name: Build React app
-      run: npm run build
-      env:
-        REACT_APP_API_BASE_URL: https://api.sportdeets.com
-        REACT_APP_ENVIRONMENT: production
-        REACT_APP_PROD_URL: https://sportdeets.com
-        REACT_APP_VERSION: ${{ env.REACT_APP_VERSION }}
-        REACT_APP_GOOGLE_MAPS_API_KEY: ${{ secrets.REACT_APP_GOOGLE_MAPS_API_KEY }}
-
     - name: Deploy to Azure Static Web App (Production)
       uses: Azure/static-web-apps-deploy@v1
       with:
@@ -42,6 +33,7 @@ jobs:
         action: "upload"
         app_location: "src/UI/sd-ui"
         output_location: "build"
+        app_build_command: "npm run build"
       env:
         REACT_APP_API_BASE_URL: https://api.sportdeets.com
         REACT_APP_ENVIRONMENT: production
