--- a/.github/workflows/deploy-ui-dev.yml
+++ b/.github/workflows/deploy-ui-dev.yml
@@ -37,10 +37,6 @@ jobs:
         action: "upload"
         app_location: "src/UI/sd-ui"
         output_location: "build"
-        app_build_command: "npm run build"
+        app_build_command: "npm run build:dev"
       env:
-        REACT_APP_API_BASE_URL: https://api-dev.sportdeets.com
-        REACT_APP_ENVIRONMENT: development
-        REACT_APP_PROD_URL: https://sportdeets.com
-        REACT_APP_VERSION: ${{ env.REACT_APP_VERSION }}
         REACT_APP_GOOGLE_MAPS_API_KEY: ${{ secrets.REACT_APP_GOOGLE_MAPS_API_KEY }}
