--- a/src/SportsData.Core/SportsData.Core.csproj
+++ b/src/SportsData.Core/SportsData.Core.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>false</ImplicitUsings>
     <Nullable>enable</Nullable>
     <UserSecretsId>981ab36a-cd06-4a5c-aa84-035790ba7b58</UserSecretsId>
-    <Configurations>Debug;Release;Local;Provider - FootballNcaa</Configurations>
+    <Configurations>Debug;Release;Local;Provider - FootballNcaa;Everything</Configurations>
 	  <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
