--- a/src/SportsData.Notification/SportsData.Notification.csproj
+++ b/src/SportsData.Notification/SportsData.Notification.csproj
@@ -8,7 +8,7 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
 	  <InvariantGlobalization>false</InvariantGlobalization>
-	  <Configurations>Debug;Release;Local;Provider - FootballNcaa</Configurations>
+	  <Configurations>Debug;Release;Local;Provider - FootballNcaa;Everything</Configurations>
 	  <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
