--- a/src/SportsData.Venue/SportsData.Venue.csproj
+++ b/src/SportsData.Venue/SportsData.Venue.csproj
@@ -8,7 +8,7 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
 	  <InvariantGlobalization>false</InvariantGlobalization>
-	  <Configurations>Debug;Release;Provider - FootballNcaa</Configurations>
+	  <Configurations>Debug;Release;Provider - FootballNcaa;Everything</Configurations>
       <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
