--- a/test/integration/SportsData.Contest.Tests.Integration/SportsData.Contest.Tests.Integration.csproj
+++ b/test/integration/SportsData.Contest.Tests.Integration/SportsData.Contest.Tests.Integration.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
-    <Configurations>Debug;Release;Provider - FootballNcaa</Configurations>
+    <Configurations>Debug;Release;Provider - FootballNcaa;Everything</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
