--- a/test/integration/SportsData.Producer.Tests.Integration/SportsData.Producer.Tests.Integration.csproj
+++ b/test/integration/SportsData.Producer.Tests.Integration/SportsData.Producer.Tests.Integration.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
-    <Configurations>Debug;Release;Provider - FootballNcaa</Configurations>
+    <Configurations>Debug;Release;Provider - FootballNcaa;Everything</Configurations>
     <UserSecretsId>cf71e392-c667-4502-ad01-9c6819a97034</UserSecretsId>
   </PropertyGroup>
 
