--- a/test/unit/SportsData.Core.Tests.Unit/SportsData.Core.Tests.Unit.csproj
+++ b/test/unit/SportsData.Core.Tests.Unit/SportsData.Core.Tests.Unit.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
-    <Configurations>Debug;Release;Provider - FootballNcaa</Configurations>
+    <Configurations>Debug;Release;Provider - FootballNcaa;Everything</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
