--- a/test/integration/SportsData.Api.Tests.Integration/SportsData.Api.Tests.Integration.csproj
+++ b/test/integration/SportsData.Api.Tests.Integration/SportsData.Api.Tests.Integration.csproj
@@ -16,5 +16,10 @@
     <ProjectReference Include="..\..\..\src\SportsData.Api\SportsData.Api.csproj" />
     <ProjectReference Include="..\..\SportsData.Tests.Shared\SportsData.Tests.Shared.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
