--- a/test/unit/SportsData.Contest.Tests.Unit/SportsData.Contest.Tests.Unit.csproj
+++ b/test/unit/SportsData.Contest.Tests.Unit/SportsData.Contest.Tests.Unit.csproj
@@ -18,5 +18,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\SportsData.Contest\SportsData.Contest.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
