--- a/test/integration/SportsData.Core.Tests.Integration/SportsData.Core.Tests.Integration.csproj
+++ b/test/integration/SportsData.Core.Tests.Integration/SportsData.Core.Tests.Integration.csproj
@@ -19,5 +19,10 @@
     <ProjectReference Include="..\..\..\src\SportsData.Core\SportsData.Core.csproj" />
     <ProjectReference Include="..\..\SportsData.Tests.Shared\SportsData.Tests.Shared.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
