--- a/test/integration/SportsData.Franchise.Tests.Integration/SportsData.Franchise.Tests.Integration.csproj
+++ b/test/integration/SportsData.Franchise.Tests.Integration/SportsData.Franchise.Tests.Integration.csproj
@@ -12,5 +12,10 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="xunit" Version="2.9.3" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
