--- a/test/integration/SportsData.Producer.Tests.Integration/SportsData.Producer.Tests.Integration.csproj
+++ b/test/integration/SportsData.Producer.Tests.Integration/SportsData.Producer.Tests.Integration.csproj
@@ -17,5 +17,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\SportsData.Producer\SportsData.Producer.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
