--- a/test/integration/SportsData.Provider.Tests.Integration/SportsData.Provider.Tests.Integration.csproj
+++ b/test/integration/SportsData.Provider.Tests.Integration/SportsData.Provider.Tests.Integration.csproj
@@ -16,5 +16,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\SportsData.Provider\SportsData.Provider.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
