--- a/test/unit/SportsData.Franchise.Tests.Unit/SportsData.Franchise.Tests.Unit.csproj
+++ b/test/unit/SportsData.Franchise.Tests.Unit/SportsData.Franchise.Tests.Unit.csproj
@@ -18,5 +18,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\SportsData.Franchise\SportsData.Franchise.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
