league week scoring

--- a/src/SportsData.Api/SportsData.Api.csproj
+++ b/src/SportsData.Api/SportsData.Api.csproj
@@ -17,6 +17,7 @@
     <None Remove="Infrastructure\Data\Canonical\Sql\Errors\CompetitionsWithoutCompetitors.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\Errors\CompetitionsWithoutPlays.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetCompletedFbsContestsBySeasonWeekId.sql" />
+    <None Remove="Infrastructure\Data\Canonical\Sql\GetCompletedSeasonWeeks.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetContestOverviewPlayLog.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetContestOverviewQuarterScores.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetContestOverviewWinProbabilityPoints.sql" />
@@ -43,6 +44,7 @@
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\Errors\CompetitionsWithoutDrives.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\Errors\CompetitionsWithoutMetrics.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetCompletedFbsContestsBySeasonWeekId.sql" />
+    <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetCompletedSeasonWeeks.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetContestOverviewGameInfo.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetContestOverviewPlayLog.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetContestOverviewQuarterScores.sql" />
