--- a/src/SportsData.Notification/azure-pipelines.yml
+++ b/src/SportsData.Notification/azure-pipelines.yml
@@ -2,7 +2,14 @@ trigger:
   branches:
     include:
       - main
-      - test/*
+  paths:
+    include:
+      - 'src/SportsData.Notification/*'
+
+pr:
+  branches:
+    include:
+      - main
   paths:
     include:
       - 'src/SportsData.Notification/*'
@@ -79,6 +86,7 @@ stages:
 - stage: BuildImagePushACR
   displayName: Build Image & Push to ACR
   dependsOn: BuildAndTest
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
   jobs:
   - job: BuildImage
     displayName: 'Build and Push Image'
