--- a/src/SportsData.Producer/azure-pipelines.yml
+++ b/src/SportsData.Producer/azure-pipelines.yml
@@ -2,7 +2,15 @@ trigger:
   branches:
     include:
       - main
-      - test/*
+  paths:
+    include:
+      - 'src/SportsData.Producer/**'
+      - 'src/SportsData.Core/**'
+
+pr:
+  branches:
+    include:
+      - main
   paths:
     include:
       - 'src/SportsData.Producer/**'
@@ -81,6 +89,7 @@ stages:
 - stage: BuildImagePushACR
   displayName: Build Image & Push to ACR
   dependsOn: BuildAndTest
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
   jobs:
   - job: BuildImage
     displayName: 'Build and Push Image'
