additional testing and logging changes

--- a/src/SportsData.Provider/appsettings.json
+++ b/src/SportsData.Provider/appsettings.json
@@ -1,15 +1,3 @@
 {
-  "AllowedHosts": "*",
-  "HistoricalSourcing": {
-    "DefaultTierDelays": {
-      "FootballNcaa": {
-        "Espn": {
-          "Season": 0,
-          "Venue": 30,
-          "TeamSeason": 60,
-          "AthleteSeason": 240
-        }
-      }
-    }
-  }
+  "AllowedHosts": "*"
 }
