begin work on refs for integration events; hateoas groundwork

--- a/src/SportsData.Api/SportsData.Api.csproj
+++ b/src/SportsData.Api/SportsData.Api.csproj
@@ -114,4 +114,8 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Application\Venues\" />
+  </ItemGroup>
+
 </Project>
